testsuite/tests/typecheck/should_fail/tcfail212.stderr

tcfail212.hs:10:7: error:
    Expecting one more argument to ‘Maybe’
    The first argument of a tuple should have kind ‘*’,
      but ‘Maybe’ has kind ‘* -> *’
    In the type signature: f :: (Maybe, Either Int)

tcfail212.hs:13:7: error:
    Expecting a lifted type, but ‘Int#’ is unlifted
    In the type signature: g :: (Int#, Int#)
